fix: breadcrumb spacing fixes

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -6,6 +6,7 @@ body {
 
 .pointer {
   cursor: pointer;
+  margin-bottom: 16px !important;
 }
 
 .pointer-k {
@@ -22,7 +23,7 @@ p {
 }
 
 h5 {
-  margin-bottom: 10px !important;
+  margin-bottom: 23px !important;
 }
 
 .go-shadow h5 {
